frame/support/test/tests/derive_impl_ui/bad_default_impl_path.stderr
error: cannot find macro `__export_tokens_tt_tiger` in this scope
  --> tests/derive_impl_ui/bad_default_impl_path.rs:42:1
   |
42 | #[derive_impl(Tiger as Animal)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `frame_support::macro_magic::forward_tokens` (in Nightly builds, run with -Z macro-backtrace for more info)
